make sure nav menu aligns with header

--- a/packages/site/src/layout/NavMenu.module.css
+++ b/packages/site/src/layout/NavMenu.module.css
@@ -5,7 +5,7 @@
   --navItemHeight: 40px;
   display: flex;
   flex-direction: column;
-  padding: 36px 0 0 0;
+  padding: 20px 0 0 0;
   height: 100dvh;
   min-width: var(--sideBarWidth);
   box-sizing: border-box;
